update jenkins with docker